Add logging support for `EngineManager` and improve method structure consistency